--- a/analysis/analysis.qmd
+++ b/analysis/analysis.qmd
@@ -1,52 +1,33 @@
 # Analysis
 
-Initial work to build the data parser from the bibTeX files.
+This assumes that the data has been parsed from the BibTeX files into table and exported as CSV file.
 
 ## Read annotated data
 
 ```{r}
-# preprocessing step for list fields in bibtex files:
-source('stripLFFromList.R') # helper function
-stripLFFromList(fn = "../studies/test_orig.bib")
-library(bib2df) # this parser seems to be give a lot warnings/errors with this data
-#anno <- bib2df("../studies/metaMER_library_extraction_first_pass.bib")
-anno <- bib2df("../studies/test_orig_strip.bib")
-anno
-anno<-data.frame(anno)
-#anno$MODEL_RATE_EMOTION_VALUES
-x <- eval(parse(text = anno$MODEL_RATE_EMOTION_VALUES))
-x
-anno$MODEL_LIST<-list(x)
-anno$MODEL_LIST
-
-length(anno$MODEL_LIST[[1]])
-
-# select two regression studies: grekow2021mu and chen2017co
-#anno_ex <- dplyr::filter(anno,BIBTEXKEY=='grekow2021mu'|BIBTEXKEY=='chen2017co')
+#| eval: false
+d <- read.csv('data/meta-analysis_data.csv')
 ```
 
-Use paradigm field to process regression and classification studies separately.
+We need to identify the core metrics:
 
-We need to identify the core values:
-- correlation (obtained from $R^2$)
+- _correlation coefficient_ (obtained from $R^2$) for regression studies.
+
+- _Matthew's correlation coefficient_ for classification studies.
+
 - n (we use STIMULUS_N rather than participant n)
 
-## Convert / Extract fields
-
-```{r}
-# create parser that gets the R2 measures out of the nested data
-
-```
-
+- Subsetting base on model and music qualities
 
 ## Analyse
 
 ### Regression studies
 
-### Valence
+#### Valence
 
 ```{r}
-# eval: false
+#| warning: false
+#| eval: false
 library(dmetar)
 library(tidyverse)
 library(meta)
