update analysis functions

--- a/studies/bib/extractions.bib
+++ b/studies/bib/extractions.bib
@@ -2236,7 +2236,7 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
                    'openSMILE.pcr.baseline features.100songs.1' = c(0.147, 0.156,0.781,0.612),
                    'openSMILE.pcr.stc.100songs.1' = c(0.150,0.157,0.770,0.585),
                    'openSMILE.pcr.baseline features and stc.100songs.1' = c(0.144,0.150,0.793,0.634),
-                   'openSMILE.ff.baseline features' = c(0.172,0.169,0.732,0.570),
+                   'openSMILE.ff.baseline features.100songs.1' = c(0.172,0.169,0.732,0.570),
                    'openSMILE.ff.stc.100songs.1' = c(0.179,0.172,0.730,.551),
                    'openSMILE.ff.baseline features and stc.100songs.1' = c(0.165,0.158,.754,0.609)
 )
