--- a/index.qmd
+++ b/index.qmd
@@ -7,26 +7,25 @@ To obtain answers to these questions, we have set out to record and analyse the 
 The public-facing version of the repository is available at
 [https://tuomaseerola.github.io/metaMER/](https://tuomaseerola.github.io/metaMER/)
 
-
 ## Plan
 
-We define the aims and methods in [preregistration plan](preregistration/preregistration.qmd), which has beeb preregistered at [OSF]().
+We define the aims and methods in [preregistration plan](preregistration/preregistration.qmd), which has beeb preregistered at [https://osf.io/6y3dr/](https://osf.io/6y3dr/).
 
-## Study Search and Selection
+### Study Search and Selection
 
 Search databases and criteria are documented in [studies/search_syntax.qmd](studies/search_syntax.qmd).
 
-## Data Extraction and Coding
+### Data Extraction and Coding
 
 Data extraction is described in [extraction details](studies/extraction_details.qmd). See also [pass3 comparison ](studies/pass3_comparison.qmd). 
 
-The data will be parsed to tabular format using a custom [library_parser.qmd](studies/library_parser.qmd).
+The data will be parsed to a tabular format using a custom [library_parser.qmd](studies/library_parser.qmd).
 
-## Analysis
+### Analysis
 
 Data analysis is covered in [analysis/analysis.qmd](analysis/analysis.qmd) document.
 
-## Manuscript
+### Manuscript
 
 The study report is available [manuscript/manuscript.qmd](manuscript/manuscript.qmd) document.
 
